edge/log/build_2026-03-23_03-34-02/bishe_mqtt/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.16 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jetson/projects/bishe/edge/build/bishe_mqtt
Consolidate compiler generated dependencies of target mqtt_node
[ 50%] Building CXX object CMakeFiles/mqtt_node.dir/src/mqtt_node.cpp.o
/home/jetson/projects/bishe/edge/src/bishe_mqtt/src/mqtt_node.cpp: In member function ‘void MqttNode::reportInfoTimerCallback()’:
/home/jetson/projects/bishe/edge/src/bishe_mqtt/src/mqtt_node.cpp:945:33: error: ‘buildInfoPayload’ was not declared in this scope
  945 |     const std::string payload = buildInfoPayload();  // 构建 JSON
      |                                 ^~~~~~~~~~~~~~~~
/home/jetson/projects/bishe/edge/src/bishe_mqtt/src/mqtt_node.cpp:946:5: error: ‘publishToInfoTopic’ was not declared in this scope
  946 |     publishToInfoTopic(payload);        // 发布到 MQTT
      |     ^~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mqtt_node.dir/build.make:76：CMakeFiles/mqtt_node.dir/src/mqtt_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/mqtt_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
